# nat23

./: .gitignore  CMakeLists.txt  README.md  build.sh  presets.conf  run.sh  windows_build.sh
data/history/: 20260704_log.txt
src/: Random.h  fileio.h  history.h  main.cpp  main.h
